--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@ body {
 
 nav {
   width: 100%;
-  position: fixed;
+/*   position: fixed; */
+  position: relative;
   top: 0;
   left: 0;
   background-color: #ffffff;
