--- a/style.css
+++ b/style.css
@@ -26,7 +26,9 @@ body {
 
 nav {
   width: 100%;
-/*   position: fixed; */
+  /* position: fixed; */
+  /* position: sticky; */
+  /* position: static; */
   position: relative;
   top: 0;
   left: 0;
@@ -37,7 +39,8 @@ nav {
 .nav__content {
   max-width: var(--max-width);
   margin: auto;
-  padding: 1.5rem 1rem;
+  /* padding: 1.5rem 1rem; */
+  padding: 1rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
